--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -12,7 +12,7 @@
     "allowSyntheticDefaultImports": true,
     "typeRoots": ["./node_modules/@types", "./src/types"],
     "outDir": "./dist", // or your preferred output directory
-    "rootDir": "./src"
+    "rootDir": "./src",
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "src/types/**/*.d.ts"]
 }
