save token when logging in for server requests

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,9 @@
 DATABASE_URL=postgresql://localhost:5432/betcha
 JWT_SECRET=your_jwt_secret
-API_FOOTBALL_KEY=your_api_football_key
 REDIS_URL=redis://localhost:6379
+
+API_FOOTBALL_KEY=your_api_football_key
+API_FOOTBALL_URL = 'https://v3.football.api-sports.io'
+
+LEAGUE_CODE=39 # PL
+SEASON=2024
