--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "ts-node src/server.ts",
+    "dev:watch": "ts-node-dev --watch src --respawn src/server.ts",
     "migrate": "npx sequelize-cli db:migrate",
     "seed": "npx sequelize-cli db:seed:all"
   },
@@ -18,6 +19,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/node-cron": "^3.0.11",
     "axios": "^1.7.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -36,9 +38,8 @@
     "sequelize-cli": "^6.6.2",
     "ts-node": "^10.9.2",
     "typeorm": "^0.3.20",
-    "typescript": "^5.5.4"
-  },
-  "devDependencies": {
-    "@types/node": "^22.4.0"
+    "typescript": "^5.5.4",
+    "@types/node": "^22.4.0",
+    "ts-node-dev": "^2.0.0"
   }
 }
