--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^22.4.0",
     "@types/node-cron": "^3.0.11",
     "axios": "^1.7.4",
     "bcryptjs": "^2.4.3",
@@ -37,9 +38,8 @@
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typeorm": "^0.3.20",
-    "typescript": "^5.5.4",
-    "@types/node": "^22.4.0",
-    "ts-node-dev": "^2.0.0"
+    "typescript": "^5.5.4"
   }
 }
